# frajd-o-matic

./: .gitignore  Cargo.toml  LICENSE  README.md
lib/dice/: Cargo.toml
lib/dice/src/: calculate.rs  lib.rs  parse.rs
lib/discord/: Cargo.toml
lib/discord/src/: commands.rs  lib.rs  message.rs
lib/discord/src/commands/: core.rs  fate.rs  help.rs  lancer.rs
