[workspace]
members = [
    # libraries
    "lib/dice",
    "lib/discord",

    # binaries
    "bin/frajd-o-matic",
]
resolver = "3"

[workspace.dependencies]
dice = { path = "lib/dice"}
discord = { path = "lib/discord"}

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }

cast_possible_truncation = "allow"
missing_errors_doc = "allow"
must_use_candidate = "allow"
uninlined_format_args = "allow"
